--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ img.img-polaroid {
 
 header .navbar {
     margin-bottom: 0;
+    margin-right: 5rem;
 }
 
 .navbar-default {
@@ -228,12 +229,11 @@ header ul.nav li ul li a {
    padding: 15px;
    margin-top: -20px;
    margin-bottom: 20px;
+  
 }
 
 .nav-social-icons a :hover{
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
+    color: #000;
 }
 
 
@@ -296,11 +296,7 @@ ul.nav li.dropdown a {
 select.selectmenu {
     display: none;
 }
-.pageTitle {
-    color: #fff;
-    margin: 30px 0 3px;
-    display: inline-block;
-}
+
 #banner {
     width: 100%;
     background: #000;
@@ -571,20 +567,24 @@ section.hero-text p {
       color: black;
       height: 500px;
   }
+
   .work-container{
       max-width: 1200px;
       margin: 0 auto;
       padding: 7rem 0.5rem;
   }
+
   .heading{
       display: grid;
       place-items: center;
   }
+
   h2{
       font-size: 2rem;
       font-weight: 800;
       color: black;
   }
+
   .heading h2::after{
       content: "";
       height: 2px;
@@ -593,13 +593,15 @@ section.hero-text p {
       display: block;
       margin: 0.3rem auto 0;
   }
+
   .heading p{
       margin-top: 0.5rem;
   }
+
   .swiper-button-next{
       right: 0;
-    
   }
+
   .swiper-button-prev{
       left: 0;
   }
@@ -614,6 +616,7 @@ section.hero-text p {
   .card-body a{
       margin-top: 0.5rem;
       font-weight: bold;
+      text-decoration: underline;
   }
 
 
