--- a/css/style.css
+++ b/css/style.css
@@ -376,8 +376,7 @@ columns: center;
 
 
 section.hero-text {
-    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #5DA5E4, #74ebd5);
+    background: whitesmoke;
     padding: 50px 0 50px 0;
     color: #fff;
     display: block;
@@ -392,11 +391,22 @@ section.hero-text p {
 }
 
 
-.hero-text .container .map{
-    right: 0;
-    margin-top: 3rem;
-    vertical-align: right;
+.review-buttons{
+    display: flex;
+    width: 100;
+    margin-left: 30px;
+    margin-right: 35px;
+    margin-bottom: 4rem;
+    align-items: center;
+   justify-content: center;
 }
+
+.review-buttons a{
+    display: flex;
+    padding: 10px;
+    
+}
+
 
 
 
@@ -745,7 +755,7 @@ section.hero-text p {
      
       .service-item {
         width: 70%;
-        height: 180px;
+        height: 120px;
         justify-content: center;
     
       }
@@ -756,6 +766,7 @@ section.hero-text p {
     .service-item h2{
         justify-content: center;
          font-size: 13px;
+        margin-bottom: -17rem;
       }
      
     
@@ -1057,6 +1068,54 @@ input.image-toggler {
 
 
 
+.free-quote-section{
+    display: flex;
+    height: 200px;
+   
+    justify-content: center;
+}
+
+
+
+.quote-container{
+    margin-top: 3rem;
+    display: flex;
+    width: 300px;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.quote-btn-container{
+    width: fit-content;
+   
+}
+
+.quote-btn{
+
+    width: 100%;
+    text-align: center;
+    padding: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: black;
+    font-weight: 800;
+    border-radius: 1rem;
+    text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    display: flex;
+    background-image: linear-gradient(to right,  #ff6900 0%, #fcb900 100%);
+
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -1344,7 +1403,9 @@ input.image-toggler {
   }
   .inner-width{
     width: 100%;
-    max-width: 1200px;
+    max-width: 900px;
+    align-items: center;
+    justify-content: center;
     margin: auto;
     padding: 0 20px;
     overflow: hidden;
@@ -1363,6 +1424,7 @@ input.image-toggler {
   }
   .services-container{
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     color:#000;
@@ -1388,12 +1450,14 @@ input.image-toggler {
     transition: 0.3s linear;
   }
   .service-icon i{
+    display: inline-block;
     line-height: 70px;
     transform: rotate(-45deg);
     font-size: 26px;
     color: #000;
   }
   .service-box:hover .service-icon{
+    transform: rotateX('90');
     background: #82ccdd;
     color: #ddd;
   }
